--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,12 @@ TABLE OF CONTENT
 @import url("navigation.css");
 
 /* logo */
-.logo{
-  height: 30px;
-  width: 131px;
+
+
+ 
+.logo {
+  height: 27px;
+    width: 121px;
 }
 /*
 1. Sections
